--- a/AndroidLifecycle/app/src/main/res/values/strings.xml
+++ b/AndroidLifecycle/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
-	<string name="app_name">Android Lifecycle</string>
+    <string name="app_name">Android Lifecycle</string>
+    <string name="hint_name">Ika Puspa Fairuz Wiwanata</string>
+    <string name="submit">Submit</string>
 </resources>
